# Space_Weather_Plotter

./: .mypy.conf  .pdm-python  .pre-commit-config.yaml  README.md  genindex.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js  space_weather_plotter.dummy.html  space_weather_plotter.html  space_weather_plotter.space_weather.html
.github/workflows/: generate-docs.yml
_modules/: index.html
_modules/space_weather_plotter/: space_weather.html
_sources/: index.rst.txt  space_weather_plotter.dummy.rst.txt  space_weather_plotter.rst.txt  space_weather_plotter.space_weather.rst.txt
docs/: conf.py  space_weather_plotter.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  space_weather_plotter.doctree  space_weather_plotter.dummy.doctree
docs/_build/html/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js  space_weather_plotter.dummy.html  space_weather_plotter.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/space_weather_plotter/: dummy.html
docs/_build/html/_sources/: modules.rst.txt
src/space_weather_plotter/: dummy.py  space_weather.py
tests/: test_dummy.py  test_swp.py
