[project]
requires-python = ">=3.11" 
name = "Space_Weather_Plotter"
description = "Default template for PDM package"
authors = [
    {name = "Vianney Saadetian", email = "vianneysaadetian@gmail.com"},
    {name = "Vianney", email = "vianneysaadetian@gmail.com"},
]
version = "0.1.0"
dependencies = [
    "pydantic>=2.6.4",
    "polars>=1.16.0",
    "matplotlib>=3.9.3",
    "requests>=2.32.3",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.3",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pdm==2.20.1",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-apidoc>=0.5.0",
    "sphinx-rtd-theme>=3.0.0rc1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pdm.lock]
targets = [
    { os = "any", python = ">=3.11", platform = "any" }
]
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
